Sat Aug 27 20:34:12 2011  Lee Noar <leenoar@sky.com>

	* unix/getcwd.c(getcwd): Only free ro_path if it was
	allocated with malloc in the first place.

Sat Jul  2 15:14:30 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* include/glob.h: Copy from FreeBSD 8.0.0 with a couple of
	UnixLib changes.  Solves bug #220.
	* unix/glob.c: Likewise.

Sun May 29 17:21:43 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/dev.c (__fsopen): Return ENOENT iso EAGAIN when unexisting
	file is opened without O_CREAT set.

Wed Apr  6 03:27:25 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/unix.c (convert_command_line): Use __canonicalise_path
	instead of __os_swi.
	* unix/dirent.c (newstream): Likewise.
	* unix/truncate.c (ftruncate, truncate): Use SWI_OS_Args_* instead
	of __os_args.
	* unix/sync.c (sync, fsync): Likewise.
	* unix/open.c (__open_fh): Follow rename __fd_to_name to
	__canonicalise_handle.
	* unix/pathconf.c (fpathconf): Use SWI_OS_Args_Canonicalise instead
	of __fd_to_name.
	* unix/fchmod.c (fchmod): Likewise.
	* debug/debug.c (__debug): Likewise. Print filename for DEV_PIPE
	handles as well.
	* stdlib/realpath.c (realpath): Use SWI_OS_FSControl_Canonicalise
	instead of __os_swi.
	* unix/chdir.c (chdir): Likewise.
	* common/serial.c (__get_file_ino): Likewise.
	* unix/getcwd.c (getcwd): Likewise.
	(getwd): Move to...
	* unix/getwd.c: ...here.
	* unix/dev.c (__fsopen): Use SWI_OS_FSControl_Canonicalise instead of
	__os_swi.
	(__fsclose, __fsfstat): Follow rename __fd_to_name to
	__canonicalise_handle.
	(__fslseek,__fsfstat,__pipewrite,__pipeselect): Use SWI_OS_Args_*
	instead of __os_args.
	* unix/tty.c (__tty_console_gterm): Fix compiler warning.
	* sound/dsp.c (__dspopen): Likewise.
	* time/gmtime_r.c (SWI_Territory_ConvertTimeToUTCOrdinals): Likewise.
	* time/broken.c (SWI_Territory_ConvertOrdinalsToTime): Likewise.
	* time/localtime_r.c (SWI_Territory_ConvertTimeToOrdinals): Likewise.
	* sys/_syslib.s (__ul_global): Move to...